@@ -388,7 +388,7 @@ public class TestFsck {
         totalMissingBlocks += ctFile.getTotalMissingBlocks();
       }
       for (CorruptedTestFile ctFile : ctFiles) {
-        ctFile.removeBlocks();
+        ctFile.removeBlocks(cluster);
       }
       // Wait for fsck to discover all the missing blocks
       while (true) {
@@ -482,7 +482,7 @@ public class TestFsck {
       return content;
     }
     
-    public void removeBlocks()
+    public void removeBlocks(MiniDFSCluster cluster)
         throws AccessControlException, FileNotFoundException,
         UnresolvedLinkException, IOException {
       for (int corruptIdx : blocksToCorrupt) {
@@ -491,8 +491,8 @@ public class TestFsck {
             .getBlockLocations(name, blockSize * corruptIdx, Long.MAX_VALUE)
             .get(0).getBlock();
         for (int i = 0; i < numDataNodes; i++) {
-          File blockFile = MiniDFSCluster.getBlockFile(i, block);
-          if (blockFile != null && blockFile.exists()) {
+          File blockFile = cluster.getBlockFile(i, block);
+          if(blockFile != null && blockFile.exists()) {
             assertTrue(blockFile.delete());
           }
         }
@@ -568,12 +568,11 @@ public class TestFsck {
       DFSClient dfsClient = new DFSClient(
           new InetSocketAddress("localhost", cluster.getNameNodePort()), conf);
       String corruptFileName = fileNames[0];
-      ExtendedBlock block = dfsClient.getNamenode()
-          .getBlockLocations(corruptFileName, 0, Long.MAX_VALUE).get(0)
-          .getBlock();
-      for (int i = 0; i < 4; i++) {
-        File blockFile = MiniDFSCluster.getBlockFile(i, block);
-        if (blockFile != null && blockFile.exists()) {
+      ExtendedBlock block = dfsClient.getNamenode().getBlockLocations(
+          corruptFileName, 0, Long.MAX_VALUE).get(0).getBlock();
+      for (int i=0; i<4; i++) {
+        File blockFile = cluster.getBlockFile(i, block);
+        if(blockFile != null && blockFile.exists()) {
           assertTrue(blockFile.delete());
         }
       }
@@ -724,7 +723,7 @@ public class TestFsck {
       assertTrue(outStr.contains(NamenodeFsck.HEALTHY_STATUS));
 
       // corrupt replicas
-      File blockFile = MiniDFSCluster.getBlockFile(0, block);
+      File blockFile = cluster.getBlockFile(0, block);
       if (blockFile != null && blockFile.exists()) {
         RandomAccessFile raFile = new RandomAccessFile(blockFile, "rw");
         FileChannel channel = raFile.getChannel();
@@ -1412,7 +1411,7 @@ public class TestFsck {
 
       // corrupt replicas
       block = DFSTestUtil.getFirstBlock(dfs, path);
-      File blockFile = MiniDFSCluster.getBlockFile(0, block);
+      File blockFile = cluster.getBlockFile(0, block);
       if (blockFile != null && blockFile.exists()) {
         RandomAccessFile raFile = new RandomAccessFile(blockFile, "rw");
         FileChannel channel = raFile.getChannel();
